--- a/WebAppService/Areas/Admin/Views/Shared/_MoldunHeader.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_MoldunHeader.cshtml
@@ -43,12 +43,12 @@
                                 <i class="ti ti-sun sun"></i>
                             </a>
                         </li>
-                        <li class="nav-item nav-icon-hover-bg rounded-circle">
+                     @*    <li class="nav-item nav-icon-hover-bg rounded-circle">
                             <a class="nav-link position-relative" href="javascript:void(0)" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                                 <i class="ti ti-message"></i>
                                 <span class="popup-badge rounded-pill bg-danger text-white fs-2">2</span>
                             </a>
-                        </li>
+                        </li> *@
                         <li class="nav-item nav-icon-hover-bg rounded-circle dropdown">
                             <a class="nav-link position-relative" href="javascript:void(0)" id="drop2" aria-expanded="false">
                                 <i class="ti ti-bell-ringing"></i>
