--- a/WebAppService/Views/Shared/_ClientMenu.cshtml
+++ b/WebAppService/Views/Shared/_ClientMenu.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="container p-0">
     <div class="row">
-        <div class="col-lg-3 col-md-3">
+        <div class="col-lg-3 col-md-3 ">
             <div class="header-logo d-none d-lg-block">
                 <a href="/Home/Index">
                     <img class="logo-img d-inline p-2" src="~/web/images/Group.png" width="255px" alt="">
@@ -21,22 +21,24 @@
             <!-- Main-menu -->
             <div class="main-nav text-left float-lg-left float-md-right">
                 <ul class="mobi-menu d-none" id="navigation">
-                    <li class="cat-item "><a href="#">Về SunMedical</a></li>
-                    <li class="cat-item cat-item-3"><a href="#">Chuyên Khoa</a></li>
-                    <li class="cat-item cat-item-4"><a href="#">Dịch Vụ Đặc Biệt</a></li>
-                    <li class="cat-item cat-item-5"><a href="#">Bác Sĩ</a></li>
-                    <li class="cat-item cat-item-6"><a href="#">Tin Tức</a></li>
-                    <li class="cat-item cat-item-7"><a href="#">Liên Hệ</a></li>
-                    <li class="cat-item cat-item-8"><a href="#">FAQ</a></li>
-                    <li class="cat-item cat-item-8" style="display: flex;font-size:13px!important;font-size: medium;font-family: Montserrat; font-weight: 600;color: white;">Chọn Ngôn Ngữ</li>
-                    <li class="" style="display: flex;">
-                        <img class="ml-3" src="https://flagcdn.com/vn.svg" alt="Vietnam Flag" width="40">
-                        <img class="ml-3" src="https://flagcdn.com/jp.svg" alt="Japan Flag" width="40">
-                        <img class="ml-3" src="https://flagcdn.com/tw.svg" alt="Taiwan Flag" width="40">
-                        <img class="ml-3" src="https://flagcdn.com/gb.svg" alt="UK Flag" width="45">
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="/AboutUs/AboutUs">Về SunMedical</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="/Service/ServiceList">Chuyên Khoa</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="/Service/ServiceList">Dịch Vụ Đặc Biệt</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="/Doctor/ListDoctor">Bác Sĩ</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="/Blog/Blog">Tin Tức</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="/LienHe/LienHe">Liên Hệ</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="/FAQ/Index">FAQ</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="#">Chọn Ngôn Ngữ</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0" style="display: flex;display: flex;width: 100%;margin-left: 12px;margin-top: 11px;">
+                        <img class="ml-0 img-fluid icon-langue" src="https://flagcdn.com/vn.svg" alt="Vietnam Flag">
+                        <img class="ml-3 img-fluid icon-langue2" src="https://flagcdn.com/jp.svg" alt="Japan Flag">
+                        <img class="ml-3 img-fluid icon-langue" src="https://flagcdn.com/tw.svg" alt="Taiwan Flag">
+                        <img class="ml-3 img-fluid icon-langue3" src="https://flagcdn.com/gb.svg" alt="UK Flag">
                     </li>
-                    <li class="mt-20"><a href="#" class="main-menu d-lg-inline btn-orrange ml-2" style="width:fit-content">Đăng Nhập tài khoản</a></li>
-
+                    <li class="mt-20 mb-20"><a href="#" class="main-menu d-lg-inline btn-orrange ml-2" style="width:fit-content">Đăng Nhập tài khoản</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="#"><i class="fa fa-map-marker"></i> Ha Noi, Viet Nam</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="#"><i class="fa fa-envelope"></i> support@carelink.com</a></li>
+                    <li class="cat-item txt-mobile col-12 p-0"><a href="#"><i class="fa fa-phone"></i> +62 864 6444 2222</a></li>
                 </ul>
                 <nav>
                     <ul class="main-menu d-none d-lg-inline">
