--- a/WebAppService/Areas/Admin/Views/Home/HomePage2.cshtml
+++ b/WebAppService/Areas/Admin/Views/Home/HomePage2.cshtml
@@ -6,80 +6,7 @@
     <script src="~/assets/plug/tinymce/js/tinymce/tinymce.min.js"></script>
     <script src="~/ajax/webappservice.tinymcesetting2.js?v=1.3"></script>
     <script> tinymceSettings(['#editor'], 550,"/web/assets/css/home.css"); </script>
-    <script>
-         var files;
-        var myScripts = {
-            init:function () {
-                myScripts.LoadDetail();
-                myScripts.Event();
-            },
-
-            Event: function () {
-                $("#btnSaveData").off("click").on("click", function () {
-                    myScripts.SaveData();
-                });
-            },
-
-            LoadDetail: function (CbGiaoDien) {
-              $.ajax({
-                        url: '/Admin/Home/LoadDetail',
-                        type: "GET",
-                        dataType: "json",
-                        data: {
-                            CbGiaoDien: "2",
-                        },
-                        success: function (response) {
-                            if (response.status == true) {
-                                var lstData = response.lstData;
-
-                                if (lstData != null) {
-                                    $("#IsCongKhai").prop("checked",lstData.isCongKhai);
-                                     if (lstData.noiDung != null) {
-                                           let waitEditor = setInterval(function () {
-                                                            if (tinymce.get('editor')) {
-                                                                tinymce.get('editor').setContent(lstData.noiDung);
-                                                                clearInterval(waitEditor);
-                                                            }
-                                                        }, 200);
-                                    } else {
-                                        tinymce.get('editor').setContent("");
-                                    }
-                                }
-                            } else {
-                                toastr.error(response.message, "Lỗi", { showMethod: "slideDown", hideMethod: "slideUp", timeOut: 1000 });
-                            }
-                        }
-                    })
-            },
-
-
-            SaveData:function () {
-                var editor = encodeURIComponent(tinymce.get('editor').getContent());
-
-                 $.ajax({
-                        type: 'Post',
-                        url: '/Admin/Home/SaveData',
-                        datatype: 'json',
-                        data: {
-                            CbGiaoDien: "2",
-                            NoiDung: editor,
-                            IsCongKhai : $("#IsCongKhai").prop("checked"),
-                        },
-                        success: function (response) {
-                            if (response.status) {
-                               toastr.success("Cập nhập thành công", "Thành Công", { showMethod: "slideDown", hideMethod: "slideUp", timeOut: 1000 });
-                               myScripts.LoadDetail();
-                               $("#bsBaiViet").modal('hide');
-                            }
-                            else {
-                                toastr.error(response.message, "Lỗi", { showMethod: "slideDown", hideMethod: "slideUp", timeOut: 1000 });
-                            }
-                        },
-                 });
-            },
-        };
-        myScripts.init();
-    </script>
+    <script src="~/ajax/webappclient.home2.js"></script>
 }
 <div class="col-md-12">
     <div class="card">
@@ -97,6 +24,9 @@
                         </label>
                     </div>
                     <div class="col-sm-6 text-end p-1">
+                        <button type="button" class="btn btn-danger waves-effect text-end z-100" id="btnGetSeo">
+                            Lấy giao diện gốc
+                        </button>
                         <button type="button" class="btn btn-primary waves-effect text-end z-100" id="btnSaveData">
                             Lưu và kết thúc
                         </button>
