--- a/WebAppService/Views/Blog/BlogDetail.cshtml
+++ b/WebAppService/Views/Blog/BlogDetail.cshtml
@@ -1,7 +1,8 @@
-﻿
+﻿@using WebAppService.Models
 @{
     ViewData["Title"] = "BlogDetail";
 }
+<link href="~/web/assets/css/blog_detail.css" rel="stylesheet" />
 
 <div class="entry-header entry-header-2 mb-0 mt-0 text-center">
     <div class="thumb-overlay img-hover-slide border-radius-5 position-relative" style="background-image: url(/web/assets/imgs/farme.png)">
@@ -12,107 +13,57 @@
         <div class="col-lg-12 col-md-12">
             <div class="row">
                 <div class="col-lg-8 col-md-12">
-                    <div class="latest-post mb-50">
+                    <div class="latest-post mb-30">
                         <div class="widget-header position-relative mb-10">
-                            <div class="row">
-                                <div class="col-12 ml-15">
-                                       <div class="no-arrow text-c-0">Bảo vệ sức khỏe</div>
+                            <div class="row ml-5">
+                                <div class="col-12">
+                                    <div class="no-arrow text-c-0 mb-2">@Model.Record.CbNhomBaiViet</div>
+                                </div>
+                                <div>
+                                    <span class="text-head-breadcrumb text-c-d ">@Model.Record.TieuDeBaiViet</span>
                                 </div>
                             </div>
                         </div>
                         <div class="loop-list-style-3">
-                            <div class="col-lg-12 col-md-12">
-                                <div class="single-excerpt">
-                                    <div class="fx-bold fx-Montserrat">
-                                        Ăn gì đề khỏe mạnh mỗi ngày?
-                                        Gợi ý thực đơn dinh dưỡng cân bằng
-                                    </div>
-                                </div>
-                                <p class="fx-Inter ">Chế độ ăn uống đóng vai trò quan trọng trong việc duy trì sức khỏe thể chất và tinh thần. Bài viết gợi ý thực đơn hàng ngày giúp bạn cân bằng dinh dưỡng, nâng cao sức đề kháng và duy trì năng lượng tích cực.</p>
-
-                                <div class="entry-main-content fx-Inter fx-content">
-                                    <div class="fx-bold fx-Montserrat">
-                                        Nguyên tắc xây dựng bữa ăn dinh dưỡng
-                                    </div>
-                                    <figure class="single-thumnail mb-30">
-                                        <img src="~/images/imagexx.png" />
-                                    </figure>
-                                    <div class="fx-bold fx-Montserrat">
-                                        1.Đa dạng thực phẩm:
-                                    </div>
-                                    <p>Không ăn đi ăn lại một loại thức ăn, hãy kết hợp nhiều loại rau, thịt, cá, đậu, trái cây để bổ sung đa dạng vi chất</p>
-                                    <div class="fx-bold fx-Montserrat">
-                                        2.Hạn chế đồ chế biến sẵn
-                                    </div>
-                                    <p>Thức ăn nhanh, đồ đóng hộp thường chứa nhiều đường, muối và chất béo bão hòa – nguyên nhân gây các bệnh mạn tính.</p>
-                                    <div class="fx-bold fx-Montserrat">
-                                        3.Ưu tiên chất béo tốt
-                                    </div>
-                                    <p>Như dầu oliu, quả bơ, các loại hạt, cá béo (cá hồi, cá thu…).</p>
-
-                                    <figure class="single-thumnail mb-30">
-                                        <img src="~/images/img2.png" />
-                                    </figure>
-                                    <div class="fx-bold fx-Montserrat">
-                                        4.Đủ nước mỗi ngày: 1.5–2 lít nước tùy thể trạng và mức độ vận động
-                                    </div>
-                                    <p>
-                                        Uống đủ nước là một trong những yếu tố cơ bản nhưng cực kỳ quan trọng để duy trì sức khỏe toàn diện. Cơ thể chúng ta chiếm tới 60–70% là nước, nên chỉ cần thiếu nước nhẹ cũng có thể gây ra các triệu chứng như mệt mỏi, đau đầu, khô da, táo bón và suy giảm khả năng tập trung.
-                                        Nhu cầu nước mỗi người sẽ khác nhau tùy theo cân nặng, điều kiện thời tiết và mức độ hoạt động thể chất trong ngày. Trung bình một người trưởng thành nên uống từ 1.5 đến 2 lít nước mỗi ngày (tương đương khoảng 6–8 ly nước). Những người thường xuyên vận động mạnh, chơi thể thao hoặc làm việc trong môi trường nóng ẩm nên bổ sung thêm nước để bù lại lượng mất qua mồ hôi.
-                                        Ngoài nước lọc, bạn cũng có thể bổ sung chất lỏng qua canh, nước trái cây tươi không đường, nước ép rau củ và các loại trà thảo mộc. Tuy nhiên, cần hạn chế nước ngọt, nước có ga và cà phê – vì chúng có thể gây mất nước nếu dùng quá nhiều.
-                                    </p>
-                                    <div class="fx-bold fx-Montserrat">
-                                        5.Ăn đúng giờ, không bỏ bữa: Đặc biệt là bữa sáng, giúp ổn định đường huyết và cung cấp năng lượng cho cả ngày
-                                    </div>
-                                    <p>
-                                        Việc duy trì thói quen ăn uống đúng giờ không chỉ giúp hệ tiêu hóa hoạt động hiệu quả mà còn hỗ trợ ổn định đường huyết, điều hòa hormone và tránh cảm giác thèm ăn quá mức. Trong đó, bữa sáng được xem là bữa ăn quan trọng nhất trong ngày – nhưng lại thường bị bỏ qua do vội vàng hoặc thói quen thức dậy muộn.
-                                        Bỏ bữa sáng khiến cơ thể rơi vào trạng thái thiếu năng lượng, dễ dẫn đến mệt mỏi, mất tập trung và rối loạn chuyển hóa. Về lâu dài, điều này có thể làm tăng nguy cơ béo phì, tiểu đường type 2 và các bệnh tim mạch.
-                                        Một bữa sáng lý tưởng nên chứa đủ 3 nhóm chất: tinh bột (như yến mạch, bánh mì nguyên cám), chất đạm (như trứng, sữa, đậu hũ) và vitamin (trái cây, rau củ). Ăn sáng đúng cách sẽ giúp bạn cảm thấy no lâu, tránh ăn vặt không lành mạnh trong ngày, đồng thời duy trì mức năng lượng ổn định để học tập và làm việc hiệu quả.
-                                    </p>
-                                    <figure class="single-thumnail mb-30">
-                                        <img src="~/images/img3.png" />
-                                    </figure>
-                                </div>
-
+                            <div class="col-lg-12 col-md-12" style="font-family:Inter !important">
+                                @Html.Raw(Model.Record.NoiDung)
                             </div>
-                            @* end  *@
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12 sidebar-right pr-0 hide-on-mobile">
-                    <div class="widget-header position-relative pl-15 mb-20">
+                    <div class="widget-header position-relative pl-15 mb-10">
                         <div class="row">
                             <div class="col-12">
-                                <span class="post-in bagde-c-1 text-white">Bài viết</span> <span class="text-c-1">Tất cả bài viết</span>
+                                 <span class="text-bdc-1">Tất cả bài viết</span>
                             </div>
                         </div>
                     </div>
                     <div class="sidebar-widget loop-list-style2 col-lg-12 col-md-12">
-                        @for (int i = 0; i < 20; i++)
+                        @foreach (var item in Model.ListData)
                         {
                             <article class="p-0 background-white border-radius-10 mb-15 mr-0  fadeIn animated">
                                 <div class="d-flex">
                                     <div class="post-thumb d-flex mr-15 border-radius-5 img-hover-scale">
                                         <a class="color-white" href="single.html">
-                                            <img src="~/assets/imgs/777be068912ffb3767e6510c19baa27eb663d38b.png" width="115px" height="100%" alt="">
+                                            <img src="@item.UrlImage" width="115px" height="100%" alt="">
                                         </a>
                                     </div>
                                     <div class="post-content media-body">
                                         <div class="entry-meta mb-10 mt-1">
-                                            <span class="post-in background1 text-secondary font-x-small">Công Nghệ y khoa mới</span>
+                                            <span class="post-in background1 text-secondary font-x-small">@item.CbNhomBaiViet</span>
                                         </div>
 
-                                        <small class="post-title font-weight-500 mb-10 text-limit-2-row"><a href="#" class="text-c-4-1">Tập Thể Dục Nhẹ Mỗi Ngày Có Thật Sự Hiệu Quả?</a></small>
+                                        <small class="post-title font-weight-500 mb-10 text-limit-2-row"><a href="#" class="text-c-4-1">@item.TieuDeBaiViet</a></small>
                                         <div class="entry-meta meta-1 flex-column font-x-small text-capitalize mb-10">
-                                            <span class="text-c-8-1 m-0"> <i class="ti ti-calendar"></i> 07 Thg 07,2025</span>
+                                            <span class="text-c-8-1 m-0"> <i class="ti ti-calendar"></i> @item.NgayDang</span>
                                             <span class="mr-1 ml-1 text-c-8-1">|</span>
-                                            <span class="text-c-8-1"><i class="ti ti-timer"></i> 1 Ngày Trước</span>
+                                            <span class="text-c-8-1"><i class="ti ti-timer"></i> @item.ThoiGianCapNhap</span>
                                         </div>
                                     </div>
                                 </div>
                             </article>
                         }
-
                     </div>
                 </div>
             </div>
