--- a/WebAppService/Views/Shared/_Layout.cshtml
+++ b/WebAppService/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="~/web/assets/css/color.css">
     <link rel="stylesheet" href="~/web/assets/css/responsive.css">
     <link href="~/web/assets/css/main.css" rel="stylesheet" />
+    <link href="~/web/assets/css/mobile.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -58,7 +59,7 @@
                 <div class="contact">
                     <span><i class="fas fa-map-marker-alt"></i> Ha Noi, Viet Nam</span>
                     <span><i class="fas fa-envelope"></i> <a href="mailto:support@carelink.com" class="text-white">support@carelink.com</a></span>
-                    <span>  <i class="fas fa-phone"></i> +62 864 644 2222</span>
+                    <span> <a href="tel:628646442222" class="text-white"> <i class="fas fa-phone"></i> +62 864 644 2222</a></span>
                     <div class="flags">
                         <img src="https://flagcdn.com/vn.svg" alt="Vietnam Flag">
                         <img src="https://flagcdn.com/jp.svg" alt="Japan Flag">
